[package]
name = "avif_converter_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
reqwest = { version = "0.11", features = ["json"] }
image = "0.23"
tokio = { version = "1", features = ["full", "sync"] }
anyhow = "1.0"
ravif = "0.11.4"
rgb = "0.8.37"

